2010-10-xx:
    * version 0.7.11
    * Fix post filtering with "ad in header" setting
    * Update 8for11 CSS
    * Fix adding users to highlighting groups from the topic list when group
      names are shown
    * New ProgFAQs CSS
    * New Ninestalgia CSS

2010-10-06:
    * version 0.7.10
    * Allow the options window to be resized again
    * Support for the GameFAQs site redesign

2010-09-28:
    * version 0.7.9
    * Fix the tracked topic holding feature
    * Fix problems with stylesheets and other features not working correctly
      for some people
    * Fix problems with topic pagination, last post links and message numbering
    * Fix double headers appearing on the poll of the day
    * Add option to disable scrolling to QuickPost after quoting
    * The options window no longer blocks focus to the Firefox window on
      Windows
    * Move the topic list QuickPost link next to the New Topic link to prevent
      accidental clicks on Add to/Remove Favorites

2010-09-01:
    * version 0.7.8
    * Remove compatibility with Firefox 3.0
    * Fix QuickPost on Brilliant
    * Fix bug with topic and post matching highlighting groups
    * Update GFPastel 2010
    * Add compatibility with Firefox 4.0
    * Remove Board Settings from the options window
    * Add topic pages to context menu on message lists
    * New highlighting interface
    * Add ability to highlight all admins, mods, VIPs or tracked topics
    * Add the GameFAQs clock to QuickPost
    * Redesign toolbar icons
    * Move sidebar options to separate window (accessed from "configure
      sidebar" link at the bottom of the sidebar)
    * Fix custom date format in message detail
    * Notification for new posts in tracked topics
    * Fix topic list link on boards that contain "track" in the title
    * Move favorites menu to platform bar
    * Fix ad blocking with sponsored poll of the day

2010-05-12:
    * version 0.7.7
    * Fix QuickPost with "go back to same page" option