@@ -6,6 +6,7 @@
       names are shown
     * New ProgFAQs CSS
     * New Ninestalgia CSS
+    * Support for GameFAQs' new signature system
 
 2010-10-06:
     * version 0.7.10
